fixed spacing/added logic

--- a/Frontend/moz-todo-react/src/App.css
+++ b/Frontend/moz-todo-react/src/App.css
@@ -1,5 +1,7 @@
 #root {
   margin: 0 auto;
+  height: 105vh;
+  contain: content;
 }
 
 .column {
@@ -7,7 +9,13 @@
 }
 
 .control {
-  padding: 1rem;
+  padding-left: 1rem;
+}
+
+button {
+  padding-left: 0;
+  padding-right: 1rem;
+  margin-right: 1.5rem;
 }
 
 /*desktop */
@@ -15,6 +23,10 @@
   .right-container{
   padding: 5rem;
   padding-top: 1rem;
+  }
+
+  .columns {
+    margin-top: 4rem;
   }
 }
 
