--- a/Frontend/moz-todo-react/src/index.css
+++ b/Frontend/moz-todo-react/src/index.css
@@ -2,9 +2,6 @@
   border: 1px solid black;
 }
 
-.column {
-  border: 1px green solid;
-}
 .img-box {
   border: 2px solid red;
 }
